--- a/public/index.html
+++ b/public/index.html
@@ -14,12 +14,12 @@
 
     <div id="root"></div>
     </body>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PSG8RPDW3G"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-G3CSMVPNW7"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-      gtag('config', 'G-PSG8RPDW3G');
+      gtag('config', 'G-G3CSMVPNW7');
     </script>
     
 </html>
